[gd_scene load_steps=3 format=3 uid="uid://dwex6pgieg76i"]

[ext_resource type="Script" path="res://Interactives/VocabSpots/WordObjects.gd" id="1_hf6vc"]
[ext_resource type="PackedScene" uid="uid://cws87xfra012q" path="res://Interactives/VocabSpots/WordHover.tscn" id="2_hc0a2"]

[node name="WordObjects" type="TextureButton"]
process_mode = 3
offset_left = 240.0
offset_top = 145.0
offset_right = 455.0
offset_bottom = 268.0
stretch_mode = 0
script = ExtResource("1_hf6vc")
objectE = "cat"
objectName = "cat"

[node name="WordHover" parent="." instance=ExtResource("2_hc0a2")]
visible = false
layout_mode = 0
offset_left = 0.0
offset_top = 0.0
offset_right = 117.0
offset_bottom = 41.0

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
